schema/testdata/errors/expression_enum_where_operator_mismatch.keel
model Post {
    fields {
        status PostStatus
    }

    actions {
        list getPublishedPosts() {
            //expect-error:32:34:AttributeExpressionError:cannot use operator '==' with types PostStatus and OtherPostStatus
            @where(post.status == OtherPostStatus.Something)
        }
    }
}

enum PostStatus {
    Published
    Draft
}

enum OtherPostStatus {
    Something
    Else
}
